<package>
  <name>sv_viso2</name>
  <version>0.0.2</version>
  <description>
    A ROS-Wrapper for libviso2, a library for visual odometry,
    maintained by the Systems, Robotics and Vision group of the
    University of the Balearic Islands, Spain. http://srv.uib.es
  </description>

  <license>GPL</license>

  <author email="stephan.wirth@uib.es">Stephan Wirth</author>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
