<package format="2">
  <name>viso2_ros</name>
  <version>0.0.1</version>
  <description>This is the ROS wrapper for libviso2,
    library for visual odometry (see package libviso2).
  </description>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/viso2_ros</url>
  <url type="bugtracker">https://github.com/srv/viso2/issues</url>

  <author email="stephan.wirth@uib.es">Stephan Wirth</author>
  <maintainer email="stephan.wirth@uib.es">Stephan Wirth</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libviso2</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>tf</depend>
  <depend>PCL</depend>
  <depend>pcl_ros</depend>
  <depend>std_srvs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
